--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=esp-ui-phone_[T_WIDTH]_[T_HEIGHT]_stylesheet
+name=esp-ui-phone_320_240_stylesheet
 version=0.2.0
 author=espressif
 maintainer=espressif
@@ -6,6 +6,6 @@ sentence=This package provides a stylesheet for the esp-ui phone with a 480x480 
 paragraph=
 category=Other
 architectures=esp32
-url=https://github.com/esp-arduino-libs/esp-ui-phone_[T_WIDTH]_[T_HEIGHT]_stylesheet
-includes=esp_ui_phone_[T_WIDTH]_[T_HEIGHT]_stylesheet.h
+url=https://github.com/esp-arduino-libs/esp-ui-phone_320_240_stylesheet
+includes=esp_ui_phone_320_240_stylesheet.h
 depends=lvgl (>=8.3 && <9), esp-ui (>=0.2.0 && <1.0.0)
